syntax="proto3";

import "Common/Utilities.proto";

option csharp_namespace="FCGR.Proto.General";
package general;

message AuthorizeUserRequest 
{
	string user_name=1;
}
message AuthorizeUserReply 
{
	uint32 id=1;
	utilities.BasicReply basic_reply=2;
}

service UserService
{
	rpc authorizeUser(AuthorizeUserRequest) returns(AuthorizeUserReply);
	rpc keepAlive(utilities.BasicRequest) returns(utilities.BasicReply);
}